--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>meetpatel</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-45YG71PJ4C"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-45YG71PJ4C');
+  </script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
