--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Hi, I’m Meet Patel</h1>
         <h3>A Web Developer</h3>
         <p>Always learning, always building.</p>
-        <a href="resume/your_resume.pdf" class="btn" download>Download Resume</a>
+        <a href="resume/Resume.pdf" class="btn" download>Download Resume</a>
       </div>
       </section>
       <footer>
