--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
       <section class="hero">
       <div class="hero-text">
-        <h1>Hi, I’m Meet Patel</h1>
+        <h1>Hi, I’m Meet</h1>
         <h3>A Web Developer</h3>
         <p>Always learning, always building.</p>
         <a href="resume/Resume.pdf" class="btn" download>Download Resume</a>
@@ -56,3 +56,4 @@
   </div>
 </body>
 </html>
+
