--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Hi, I’m Meet</h1>
         <h3>A Web Developer</h3>
         <p>Always learning, always building.</p>
-        <a href="resume/Resume.pdf" class="btn" download>Download Resume</a>
+        <a href="resume/Meet_Resume.pdf" class="btn" download>Download Resume</a>
       </div>
       </section>
       <footer>
@@ -56,4 +56,5 @@
   </div>
 </body>
 </html>
+
 
