--- a/projects.html
+++ b/projects.html
@@ -45,11 +45,11 @@
                   <a href="https://github.com/meet-patel011/The-Blog-spot" class="btn">View</a>
                 </div>
                 
-<!--                 <div class="project-card">
+                <div class="project-card">
                   <h3>Nexus</h3>
                   <p>In development...</p>
                   <a href="#" class="btn" onclick="alert('⚠️ This button does nothing. Yet you clicked it.')">View</a>
-                </div> -->
+                </div>
               
             </div>
           </div>
