--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
   
                 <div class="project-card">
                   <h3>SportArena</h3>
-                  <p>A conceptual networking platform that helps users to create and organize sports events, connect with nearby players, and schedul matches.</p>
+                  <p>A conceptual networking platform that helps users to create and organize sports events, connect with nearby players, and schedule matches.</p>
                   <a href="https://github.com/meet-patel011/SportArena" class="btn">View</a>
                 </div>
                 
@@ -75,4 +75,5 @@
 </body>
 
 </html>
+
 
