--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,18 @@
                   <p>This personal portfolio showcases my developer identity with a consistent dark neon theme, responsive design, and smooth UI interactions.</p>
                   <a href="#" class="btn"View</a>
                 </div>
+
+                <div class="project-card">
+                  <h3>Blog Website</h3>
+                  <p>An elegant platform where users can read and share blog posts, organized by categories with smooth navigation and clean readability.</p>
+                  <a href="https://github.com/meet-patel011/The-Blog-spot" class="btn">View</a>
+                </div>
               
+                <div class="project-card">
+                  <h3>Portfolio Website</h3>
+                  <p>This personal portfolio showcases my developer identity with a consistent dark neon theme, responsive design, and smooth UI interactions.</p>
+                  <a href="#" class="btn"View</a>
+                </div>
 
             </div>
           </div>
@@ -66,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
