--- a/projects.html
+++ b/projects.html
@@ -46,8 +46,8 @@
               </div>
 
               <div class="project-card">
-                <h3>Sports Buddy</h3>
-                <p>A conceptual networking platform that helps users discover local sports events, connect with nearby players, and schedule friendly matches.</p>
+                <h3>SportArena</h3>
+                <p>A conceptual networking platform that helps users find and create local sports events, connect with nearby players, and schedule matches.</p>
                 <a href="#" class="btn" onclick="alert('⚠️ This button does nothing. Yet you clicked it.')">Coming Soon</a>
               </div>
             </div>
@@ -73,3 +73,4 @@
     </div>
 </body>
 </html>
+
