--- a/projects.html
+++ b/projects.html
@@ -40,15 +40,9 @@
               </div>
 
               <div class="project-card">
-                <h3>Resume Analyzer</h3>
-                <p>A smart resume analysis tool that extracts content, evaluates it using AI prompts, and provides personalized suggestions for improvement.</p>
-                <a href="#" class="btn" onclick="alert('⚠️ This button does nothing. Yet you clicked it.')">Coming Soon</a>
-              </div>
-
-              <div class="project-card">
                 <h3>SportArena</h3>
                 <p>A conceptual networking platform that helps users find and create local sports events, connect with nearby players, and schedule matches.</p>
-                <a href="#" class="btn" onclick="alert('⚠️ This button does nothing. Yet you clicked it.')">Coming Soon</a>
+                <a href="#" class="btn" onclick="alert('⚠️ This button does nothing. Yet you clicked it.')">View</a>
               </div>
             </div>
           </div>
@@ -73,4 +67,5 @@
     </div>
 </body>
 </html>
+
 
