--- a/projects.html
+++ b/projects.html
@@ -36,13 +36,13 @@
               <div class="project-card">
                 <h3>Portfolio Website</h3>
                 <p>This personal portfolio showcases my developer identity with a consistent dark neon theme, responsive design, and smooth UI interactions.</p>
-                <a href="#" class="btn">Live Demo</a>
+                <a href="#" class="btn">Live</a>
               </div>
 
               <div class="project-card">
                 <h3>SportArena</h3>
                 <p>A conceptual networking platform that helps users find and create local sports events, connect with nearby players, and schedule matches.</p>
-                <a href="#" class="btn" onclick="alert('⚠️ This button does nothing. Yet you clicked it.')">View</a>
+                <a href="https://github.com/meet-patel011/SportArena" class="btn">View</a>
               </div>
             </div>
           </div>
@@ -67,5 +67,6 @@
     </div>
 </body>
 </html>
+
 
 
