--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
               <div class="project-card">
                 <h3>Portfolio Website</h3>
-                <p>This personal portfolio showcases my developer identity with a consistent dark neon theme, responsive design, and smooth UI interactions.</p>
+                <p>This personal portfolio showcases my developer identity with all my project works and code.</p>
                 <a href="#" class="btn">Live</a>
               </div>
 
@@ -67,6 +67,7 @@
     </div>
 </body>
 </html>
+
 
 
 
