--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,12 @@
                 <p>A conceptual networking platform that helps users find and create local sports events, connect with nearby players, and schedule matches.</p>
                 <a href="https://github.com/meet-patel011/SportArena" class="btn">View</a>
               </div>
+
+              <div class="project-card">
+                <h3>Nexus</h3>
+                <p>In development... </p>
+                <a href="https://github.com/meet-patel011" class="btn">View</a>
+              </div>
             </div>
           </div>
         </section>
@@ -67,6 +73,7 @@
     </div>
 </body>
 </html>
+
 
 
 
