--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
               <div class="project-card">
                 <h3>Portfolio Website</h3>
-                <p>This personal portfolio showcases my developer identity with all my project works and code.                                          </p>
+                <p>This personal portfolio reflect my journey as a developer. From websites to applications, each project highlights my skills and this space is where I showcase my work, experiments, and growth as I continue learning and building.</p>
                 <a href="#" class="btn">Live</a>
               </div>
 
@@ -73,6 +73,7 @@
     </div>
 </body>
 </html>
+
 
 
 
