--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
 
               <div class="project-card">
                 <h3>Portfolio Website</h3>
-                <p>This personal portfolio reflect my journey as a developer. From websites to applications, each project highlights my skills and this space is where I showcase my work, experiments, and growth as I continue learning and building.</p>
+                <p>My portfolio reflect my journey as a developer. This space is where I showcase my work and growth as I continue learning and building.</p>
                 <a href="#" class="btn">Live</a>
               </div>
 
@@ -48,7 +48,7 @@
               <div class="project-card">
                 <h3>Nexus</h3>
                 <p>In development...                                                                                                                        </p>
-                <a href="https://github.com/meet-patel011" class="btn">View</a>
+<!--                 <a href="https://github.com/meet-patel011" class="btn">View</a> -->
               </div>
             </div>
           </div>
@@ -73,6 +73,7 @@
     </div>
 </body>
 </html>
+
 
 
 
