--- a/about.html
+++ b/about.html
@@ -26,8 +26,7 @@
         <div class="about-content">
           <h2>About Me</h2>
           <p>
-            I'm <strong>Meet Patel</strong>, a passionate backend developer with a strong focus on Python. I enjoy building scalable, clean, and efficient backend systems. I'm currently learning Django to strengthen my web development skills and create full-featured applications.  
-            <br><br>
+            I'm <strong>Meet Patel</strong>, a passionate Web developer with a strong focus on Javascript. I enjoy building scalable, clean, and efficient systems. <br><br>
             I prefer working behind the scenes — APIs, logic, and data handling are my favorite parts of the development process.
           </p>
         </div>
@@ -51,4 +50,5 @@
     </footer>
     </div>
 </body>
+
 </html>
