--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </a>
         </div>
 
-        <button class="btn">Download CV</button>
+        <a href="images/Meet Resume.pdf" download class="cv-btn">Download CV</a>
       </div>
 
       <div class="hero-img">
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
