--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
         <h4>Full Stack Developer</h4>
 
         <p>
-          I’m a Full Stack Developer focused on building modern, responsive, and scalable web applications.
-       I enjoy working across both frontend and backend, translating ideas into functional digital experiences. I follow best practices, write maintainable code, and constantly refine my skills through hands-on projects and real-world problem solving. 
-       I’m always open to discussing new opportunities, collaborative projects, or learning experiences. If you’re looking for a dedicated developer who’s eager to grow and contribute, feel free to connect with me — I’d love to have a conversation.
+         I’m a Full Stack Developer focused on building modern, responsive, and scalable web applications. I work across both frontend and backend, turning ideas into a functional and user-centric digital experiences. I value writing maintainable code, following best practices, and continuously improving my skills through projects and real-world problem solving. I’m always open to discussing new opportunities, collaborations, or learning experiences. If you’re looking for a dedicated developer who’s eager to grow and contribute, feel free to connect — I’d be happy to start a conversation.
         </p>
       </div>
 
@@ -196,4 +194,5 @@
 
 </body>
 </html>
+
 
