--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
 
       <div class="about-text">
         <h2>About Me</h2>
-        <h4>Full Stack Developer</h4>
-
+        
         <p>
-         I’m a Full Stack Developer focused on building modern, responsive, and scalable web applications. I work across both frontend and backend, turning ideas into a functional and user-centric digital experiences. I value writing maintainable code, following best practices, and continuously improving my skills through projects and real-world problem solving. I’m always open to discussing new opportunities, collaborations, or learning experiences. If you’re looking for a dedicated developer who’s eager to grow and contribute, feel free to connect — I’d be happy to start a conversation.
+         I’m a Web Developer focused on building modern, responsive, and scalable web applications. I work across both frontend and backend, turning ideas into a functional and user-centric digital experiences. I value writing maintainable code, following best practices, and continuously improving my skills through projects and real-world problem solving. I’m always open to discussing new opportunities, collaborations, or learning experiences. If you’re looking for a dedicated developer who’s eager to grow and contribute, feel free to connect — I’d be happy to start a conversation.
         </p>
       </div>
 
@@ -194,5 +193,6 @@
 
 </body>
 </html>
+
 
 
