--- a/index.html
+++ b/index.html
@@ -48,25 +48,23 @@
 
       <div class="hero-img">
         <div class="hexagon">
-          <img src="images/profile.jpeg" alt="Meet Patel" />
+          <img src="images/profile.png" alt="Meet Patel">
         </div>
+
       </div>
     </section><br><br><br><br><br>
 
     <section id="about" class="about fade-in">
     <div class="about-container">
 
-      <div class="about-img">
-        <div class="hexagon">
-          <img src="images/image.jpeg" alt="Meet Patel">
-        </div>
-      </div>
-
       <div class="about-text">
         <h2>About Me</h2>
-        
+        <h4>Web Developer</h4>
+
         <p>
-         I’m a Web Developer focused on building modern, responsive, and scalable web applications. I work across both frontend and backend, turning ideas into a functional and user-centric digital experiences. I value writing maintainable code, following best practices, and continuously improving my skills through projects and real-world problem solving. I’m always open to discussing new opportunities, collaborations, or learning experiences. If you’re looking for a dedicated developer who’s eager to grow and contribute, feel free to connect — I’d be happy to start a conversation.
+          I’m a Full Stack Developer focused on building modern, responsive, and scalable web applications.
+       I enjoy working across both frontend and backend, translating ideas into functional digital experiences. I follow best practices, write maintainable code, and constantly refine my skills through hands-on projects and real-world problem solving. 
+       I’m always open to discussing new opportunities, collaborative projects, or learning experiences. If you’re looking for a dedicated developer who’s eager to grow and contribute, feel free to connect with me — I’d love to have a conversation.
         </p>
       </div>
 
@@ -150,12 +148,39 @@
   <!-- CONTACT -->
   <section id="contact" class="contact fade-in">
     <h2>Contact Me</h2>
+    <p class="contact-desc">
+      Feel free to reach out for opportunities, collaborations, or any queries.
+    </p>
 
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message"></textarea>
-      <button class="btn">Send Message</button>
+    <form
+      action="https://formspree.io/f/xaqwkbyv"
+      method="POST"
+      class="contact-form"
+    >
+      <input
+        type="text"
+        name="name"
+        placeholder="Your Name"
+        required
+      />
+
+      <input
+        type="email"
+        name="email"
+        placeholder="Your Email"
+        required
+      />
+
+      <textarea
+        name="message"
+        placeholder="Your Message"
+        rows="5"
+        required
+      ></textarea>
+
+      <button type="submit" class="contact-btn">
+        Send Message
+      </button>
     </form>
   </section>
 
@@ -193,6 +218,3 @@
 
 </body>
 </html>
-
-
-
