--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </a>
         </div>
 
-        <a href="images/Meet Resume.pdf" download class="cv-btn">Download CV</a>
+        <a href="images/Resume.pdf" download class="cv-btn">Download CV</a>
       </div>
 
       <div class="hero-img">
@@ -218,3 +218,4 @@
 
 </body>
 </html>
+
