--- a/index.html
+++ b/index.html
@@ -203,19 +203,14 @@
     }
     typeEffect();
 
-    // Fade-in on scroll
-    const faders = document.querySelectorAll(".fade-in");
-
-    window.addEventListener("scroll", () => {
-      faders.forEach(el => {
-        const top = el.getBoundingClientRect().top;
-        if (top < window.innerHeight - 100) {
-          el.classList.add("show");
-        }
-      });
+    // Fade-in on page load
+    document.querySelectorAll(".fade-in").forEach(el => {
+      el.classList.add("show");
     });
+
   </script>
 
 </body>
 </html>
+
 
