--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </a>
         </div>
 
-        <a href="images/Resume.pdf" download class="cv-btn">Download CV</a>
+        <a href="resume/Resume.pdf" download class="cv-btn">Download CV</a>
       </div>
 
       <div class="hero-img">
@@ -212,5 +212,6 @@
 
 </body>
 </html>
+
 
 
